@@ -1,6 +1,7 @@
 Revision history for IO-Uring
 
 {{$NEXT}}
+          - Add pflags argument to recv and send
 
 0.002     2025-02-19 17:04:50+01:00 Europe/Brussels
           - Add bind, listen, sendto and socket methods
